--- a/src/Baron.Web/appsettings.json
+++ b/src/Baron.Web/appsettings.json
@@ -3,5 +3,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "IdentityDataContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Baron.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
