--- a/src/Baron.Web/package.json
+++ b/src/Baron.Web/package.json
@@ -21,10 +21,13 @@
     "update-packages": "npx npm-check -u"
   },
   "dependencies": {
+    "apexcharts": "^3.26.2",
     "axios": "^0.18.0",
     "core-js": "^2.5.3",
     "node-sass": "^6.0.0",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.6.1",
+    "vue-content-placeholders": "^0.2.1",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.0.3",
     "vue-server-renderer": "^2.6.10",
