--- a/src/Baron.Web/package.json
+++ b/src/Baron.Web/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "apexcharts": "^3.26.2",
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^2.5.3",
     "node-sass": "^6.0.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.12",
     "vue-apexcharts": "^1.6.1",
     "vue-content-placeholders": "^0.2.1",
+    "vue-moment": "^4.1.0",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.0.3",
     "vue-server-renderer": "^2.6.10",
@@ -58,7 +60,7 @@
     "aspnet-webpack": "^3.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.6.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.1",
